--- a/contact-me.html
+++ b/contact-me.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h3>My Contact Details</h3>
-  <p>My number:0533794444 </p>
+  <p>My number:+966533794444 </p>
   <p>Email:faresalamoudi10@gmail.com</p>
   <p>Home Address:6977 Al Mostaneer Street Meshrefah
 Jeddah 23341
